# Crossplatform-Cyber-Terminal

./: .gitignore  CMakeLists.txt  README.md
AppDir/: .DirIcon  AppRun  cterm.desktop
include/: ansi.h  config.h  platform.h  pty.h  tabs.h  tools.h  window.h
src/: ansi.c  config.c  font.c  main.c  pty.c  tabs.c  tools.c  window.c
